# manager

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  dist-workspace.toml
.github/workflows/: release-gui.yml  release.yml
app/: Cargo.toml  tauri.conf.json
app/icons/: icon.icns
app/src/: lib.rs  main.rs
app/ui/: index.html  main.js  styles.css
crates/aincient-cli/: Cargo.toml
crates/aincient-cli/src/: main.rs  style.rs
crates/aincient-core/: Cargo.toml
crates/aincient-core/src/: docker.rs  lib.rs  ops.rs  stack.rs
