[workspace]
resolver = "2"
members = [
    "crates/aincient-core",
    "crates/aincient-cli",
    "app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/aincient-labs/cms"
authors = ["AIncient Labs"]
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = "thin"
