[workspace]
resolver = "2"
members = [
    "crates/aincient-core",
    "crates/aincient-cli",
    "app",
]

[workspace.package]
version = "0.2.5"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/aincient-labs/manager"
homepage = "https://github.com/aincient-labs/manager"
authors = ["AIncient Labs"]
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Restrained brand colour for CLI output; `supports-colors` auto-disables on
# non-TTY / NO_COLOR via the `supports-color` crate.
owo-colors = { version = "4", features = ["supports-colors"] }

[profile.release]
strip = true
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
