[package]
name = "aincient-manager"
description = "AIncient Manager — a double-click installer and manager for the AIncient CMS appliance."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "aincient_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aincient-core = { path = "../crates/aincient-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
