[package]
name = "atelier-manager"
description = "Atelier Manager — a double-click installer and manager for the Atelier CMS appliance."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "atelier_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aincient-core = { path = "../crates/aincient-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# The desktop GUI ships as a bundled .dmg/.msi/AppImage (via `cargo tauri build`),
# not as a raw binary — so exclude it from cargo-dist (which distributes the CLI).
[package.metadata.dist]
dist = false
