[package]
name = "atelier"
description = "The `atelier` command — install, update, back up, and manage your Atelier CMS appliance."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "atelier"
path = "src/main.rs"

[dependencies]
aincient-core = { path = "../aincient-core" }
anyhow.workspace = true
serde_json.workspace = true
owo-colors.workspace = true
clap = { version = "4", features = ["derive"] }
