[package]
name = "aincient-core"
description = "Lifecycle engine for an AIncient CMS appliance — shared by the aincient CLI and the Tauri manager."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "5"
getrandom = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
